# gun-shop

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 03336fb0cbf5_.py  6706eb9d5fc0_initial.py  c7bbaf012be6_.py  ce869bae1920_add_gun_and_category_models.py  f27883916ee0_.py  f42f2151609e_initialize_db_after_crash.py
api/: auth.py
api/repositories/: ammo_repository.py  auth_repository.py  category_repository.py  gun_repository.py
api/routers/: ammo_router.py  auth_router.py  category_router.py  gun_router.py
frontend/about_us/: aboutuspage.css  aboutuspage.html  aboutuspage.js
frontend/admin_register_form_page/: admin_register_form.css  admin_register_form.html  admin_register_form.js
frontend/main_page/: mainPage.css  mainPage.html  mainPage.js
frontend/main_page/weaponpage/: weaponpage.css  weaponpage.html
frontend/map_page/: mappage.css  mappage.html  mappage.js
frontend/weapon_page_by_category/: weaponByCategoryPage.css  weaponByCategoryPage.html  weaponByCategoryPage.js
frontend/weapon_page_by_name/: weaponPageByName.css  weaponPageByName.html  weaponPageByName.js
frontend/weaponpage/: weaponpage.css  weaponpage.html  weaponpage.js
models/: models.py  schemas.py
utils/: database.py  db_config.py
