[tool.poetry]
name = "gun-shop"
version = "0.1.0"
description = ""
authors = ["Igor Ruzhilov <iruzhilov@gmail.com>"]
readme = "README.md"
packages = [{include = "gun_shop"}]

[tool.poetry.dependencies]
python = "3.10.5"
alembic = {extras = ["all"], version = "^1.12.0"}
sqlalchemy = {extras = ["all"], version = "^2.0.22"}
pydantic = {extras = ["all"], version = "^2.4.2"}
fastapi = {extras = ["all"], version = "^0.103.2"}
asyncpg = "^0.28.0"
cryptography = "^41.0.4"
fastapi-filter = "^1.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"
bcrypt = "^4.0.1"
middleware = "^1.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
